--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NatureEmoi - vente de plante en ligne</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/js/all.min.js"></script>
 </head>
 <body>
     <section class="top-page">
@@ -19,9 +20,106 @@
        </header>
        <div class="landing-page">
         <h1 class="big-title">NatureEmoi, meilleur que le chocolat.</h1>
-       </div>
-        
+        <a class="scroll-down" href="">scroll <i class="fas fa-angle-down"></i></a>
+       </div> 
     </section>
+
+    <section class="services">
+        <div class="service-item">
+            <i class="fas fa-store delivery-icon"></i>
+            <p class="service-details">Notre magasin à votre service</p>
+        </div>
+        <div class="service-item">
+            <i class="fas fa-people-carry delivery-icon"></i>
+            <p class="service-details">Retrait en magasin sans contact</p>
+        </div>
+        <div class="service-item">
+            <i class="fas fa-truck delivery-icon"></i>
+            <p class="service-details">Livraison à domicile sans contact</p>
+        </div>
+    </section>
+
+    <section class="best-items">
+        <h2 class="section-title">
+            Nos meilleures ventes
+        </h2>
+        <div class="best-plants">
+            <a class="plant-box plant1 no-grid">
+                <div class="plant-details">
+                    <p class="plant-name">plante</p>
+                    <p class="plant-price">24.99€</p>
+                </div>
+            </a>
+            <a class="plant-box plant2 no-grid">
+                <div class="plant-details">
+                    <p class="plant-name">plante</p>
+                    <p class="plant-price">14.99€</p>
+                </div>
+            </a>
+            <a class="plant-box plant3 no-grid">
+                <div class="plant-details">
+                    <p class="plant-name">plante</p>
+                    <p class="plant-price">24.99€</p>
+                </div>
+            </a>
+            <a class="plant-box plant4 no-grid">
+                <div class="plant-details">
+                    <p class="plant-name">plante</p>
+                    <p class="plant-price">29.99€</p>
+                </div>
+            </a>
+        </div>
+    </section> 
+
+    <section class="all-plant">
+        <h2 class="section-title">
+            Nos plantes
+        </h2>
+
+        <div class="plant-grid">
+            <a class="plant-grid1 plant-box">
+                <div class="plant-details">
+                <p class="plant-name">plante</p>
+                <p class="plant-price">17.99€</p>
+            </div>
+            </a> 
+            <a class="plant-grid2 plant-box">
+                <div class="plant-details">
+                    <p class="plant-name">plante</p>
+                    <p class="plant-price">9.99€</p>
+                </div>
+            </a>
+            <a class="plant-grid3 plant-box">
+                <div class="plant-details">
+                    <p class="plant-name">plante</p>
+                    <p class="plant-price">44.99€</p>
+                </div>
+            </a>
+            <a class="plant-grid4 plant-box">
+                <div class="plant-details">
+                    <p class="plant-name">plante</p>
+                    <p class="plant-price">30.99€</p>
+                </div>
+            </a>
+            <a class="plant-grid5 plant-box">
+                <div class="plant-details">
+                    <p class="plant-name">plante</p>
+                    <p class="plant-price">17.99€</p>
+                </div>
+            </a>
+            <a class="plant-grid6 plant-box">
+                <div class="plant-details">
+                    <p class="plant-name">plante</p>
+                    <p class="plant-price">24.99€</p>
+                </div>
+            </a>
+        </div>
+    </section>
+
+    <footer>
+        <p class="coporight">&copy;2022 - Nature Emoi</p>
+        <a href="" class="cgv">Conditions générales de ventes</a>
+    </footer>
     
 </body>
 </html>
